Fix some alignments and labels.

--- a/dev/sass/qwiki/_forms.scss
+++ b/dev/sass/qwiki/_forms.scss
@@ -13,7 +13,7 @@ $input-shadow: 0;
 $input-shadow-focus: 0;
 $input-font-family: $ma-font-regular;
 $input-font-size: rem-calc(14);
-$input-line-height: rem-calc(24);
+$input-line-height: 1.5;
 $input-transition: border-color .2s, background-color .2s ease-in-out;
 $input-padding: rem-calc(10 8);
 $input-placeholder-color: $ma-secondary-text;
@@ -39,12 +39,6 @@ select {
   font-size: 1em;
 }
 
-label{
-  input{
-    margin: rem-calc(8 0 0 0);
-  }
-}
-
 .input-group>:last-child{
     border-top-right-radius: $ma-border-radius;
     border-bottom-right-radius: $ma-border-radius;
@@ -65,6 +59,7 @@ label{
     }
     small {
       color: $ma-failure;
+      font-size: rem-calc(12);
     }
     input{
       border: 1px solid $ma-failure;
@@ -78,7 +73,7 @@ label{
     right: 0;
     color: $ma-grey;
     font-size: 1.45em;
-    line-height: calc($input-font-size * $input-line-height);
+    height: ($input-font-size * $input-line-height) + (get-side($input-padding, 'top') + get-side($input-padding, 'bottom')) - rem-calc(1);
     padding: $input-padding;
   }
   .ma-small{
@@ -89,7 +84,7 @@ label{
       padding: rem-calc(6 8);
     }
   }
-  label input{
+  label + input{
     margin: rem-calc(8 0 0 0);
   }
 }
@@ -97,7 +92,6 @@ label{
 @mixin placeholder-style{
   @include ma-font('regular');
   color: $ma-grey;
-  font-style: italic;
 }
 
 ::-webkit-input-placeholder {
@@ -131,10 +125,10 @@ input[type]:disabled {
 
 
 // Used to calculate offset to center inputs.
-  $line-heigt: 1.4;
+  $line-height: 1.428571;
   $font-size: rem-calc(14);
   $size: rem-calc(16);
-  $offset: rem-calc(($font-size * $line-heigt - $size) / 2);
+  $offset: rem-calc(($font-size * $line-height - $size) / 2);
 
 %item-label {
     @include ma-font('regular');
@@ -144,6 +138,7 @@ input[type]:disabled {
     margin-left: 0;
     position: relative;
     padding-left: rem-calc(16) + $size;
+    line-height: $line-height;
 }
 %item-label-pseudo {
     content: "";
@@ -232,7 +227,7 @@ textarea{
   @include switch-size(rem-calc(14), $switch-radius * 2, rem-calc(1));
   @include ma-font('regular');
   margin: rem-calc(8 16 0 0);
-  height: rem-calc(21);
+  height: rem-calc(20);
   .switch-input {
     margin-bottom: 0;
   }
